--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                 <a href="#">
                     <img src="./img/logo.png" alt="" class="navigation__logo">
                 </a>
-                
             </div>
             <ul class="navigation__list">
                 <li class="navigation__item"><a href="#" class="navigation__link navigation__link--active">主页</a></li>
@@ -41,7 +40,87 @@
         </div>
     </header>
 
-
+    <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+                Exciting Experience for Video Editing
+            </h2>
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="card card--medium">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--1">
+                            &nbsp;
+                        </div>
+                        <div class="card__detail">
+                            <h4 class="card__heading card__heading--1">
+                                成员聚餐
+                            </h4>
+                            <p class="card__text">
+                                和李台共进晚餐。
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-1">
+                        <div class="card__more-info">
+                            <p class="card__more-info--sub">乾森工作室成员聚餐</p>
+                            <p class="card__more-info--main">每学期一次</p>
+                            <a href="#" class="btn btn--white">立即预定</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <div class="card card--medium">
+                    <div class="card__side card__side--front">
+                        <div class="card__picture card__picture--2">
+                            &nbsp;
+                        </div>
+                        <div class="card__detail">
+                            <h4 class="card__heading card__heading--2">
+                                Bilibili
+                            </h4>
+                            <p class="card__text">
+                                乾森工作室Bilibili账号已开通
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card__side card__side--back card__side--back-2">
+                        <div class="card__more-info">
+                            <p class="card__more-info--sub">乾森工作室Bilibili账号已开通</p>
+                            <p class="card__more-info--main">Exited!!!</p>
+                            <a href="#" class="btn btn--white">立即关注</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card card--wide">
+                <div class="card__side card__side--front">
+                    <div class="card__picture card__picture--3">
+                        &nbsp;
+                    </div>
+                    <div class="card__detail">
+                        <h4 class="card__heading card__heading--3">
+                            CHOSER STUDIO 硬件推荐
+                        </h4>
+                        <p class="card__text">
+                            采用NVIDIA Maxwell II或以上架构的 GPU 进行视频渲染
+                        </p>
+                    </div>
+                </div>
+                <div class="card__side card__side--back card__side--back-3">
+                    <div class="card__more-info">
+                        <p class="card__more-info--sub">视频渲染请使用</p>
+                        <p class="card__more-info--main">NVIDIA Maxwell II 及以上架构 GPU</p>
+                        <a href="#" class="btn btn--white">了解更多</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <!-- <section class="grid-test">
         <div class="row">
