--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="card__side card__side--back card__side--back-2">
                         <div class="card__more-info">
                             <p class="card__more-info--sub">乾森工作室Bilibili账号已开通</p>
-                            <p class="card__more-info--main">Exited!!!</p>
+                            <p class="card__more-info--main">Excite!!!</p>
                             <a href="#" class="btn btn--white">立即关注</a>
                         </div>
                     </div>
